Correction d'un bug du footer en version mobile, Project fini a 100%.

--- a/css/style.css
+++ b/css/style.css
@@ -634,4 +634,10 @@ footer a {
     flex-direction: column;
     gap: 35px;
   }
+
+  .a-propos,
+  .charte,
+  .assistance {
+    width: 100%;
+  }
 }
